add: header and navbar

--- a/home.html
+++ b/home.html
@@ -20,11 +20,21 @@
         <div class="search">
             <div class="input-group">
                 <input type="text" class="form-control" aria-label="book-name" placeholder="Qual título você está procurando?">
-                    <button type="button" class="btn btn-purple"><img src="">search</button>
-                </div>
+                <button type="button" class="btn btn-purple"><img src="">search</button>
+            </div>
+        </div>
+        <div class="titles">
+            <div class="row">
+                <div class="col-4 col-md-2">Romance</div>
+                <div class="col-4 col-md-2">Ficção</div>
+                <div class="col-4 col-md-2">LGBTQIA+</div>
+                <div class="col-4 col-md-2">Suspense</div>
+                <div class="col-4 col-md-2">Guerras</div>
+                <div class="col-4 col-md-2">Robótica</div>
             </div>
         </div>
     </header>
+    <hr class="division">
     <footer>
 
     </footer>
