Estrutura: header e footer

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav class="navbar-color fixed-top">
             <div class="center">
                 <a href="#"><img src="images/structure-logo_header.png" alt="logo-site" class="logo"></a>
@@ -17,26 +17,64 @@
                 <a class="shuffle" href="#"><img src="images/structure-shuffle-button.png"></a>
             </div>
         </nav>
-        <div class="search">
-            <div class="input-group">
-                <input type="text" class="form-control" aria-label="book-name" placeholder="Qual título você está procurando?">
-                <button type="button" class="btn btn-purple"><img src="">search</button>
+        <div class="nav-cont fixed-top">
+            <div class="search fixed-top">
+                <div class="input-group">
+                    <input type="text" class="form-control" aria-label="book-name" placeholder="Qual título você está procurando?">
+                    <button type="button" class="btn btn-purple"><img src="">search  <img src="/images/structure-search.png"></button>
+                </div>
             </div>
-        </div>
-        <div class="titles">
-            <div class="row">
-                <div class="col-4 col-md-2">Romance</div>
-                <div class="col-4 col-md-2">Ficção</div>
-                <div class="col-4 col-md-2">LGBTQIA+</div>
-                <div class="col-4 col-md-2">Suspense</div>
-                <div class="col-4 col-md-2">Guerras</div>
-                <div class="col-4 col-md-2">Robótica</div>
+            <div class="titles fixed-top">
+                <div class="row">
+                    <div class="col-4 col-md-2">Romance</div>
+                    <div class="col-4 col-md-2">Ficção</div>
+                    <div class="col-4 col-md-2">LGBTQIA+</div>
+                    <div class="col-4 col-md-2">Suspense</div>
+                    <div class="col-4 col-md-2">Guerras</div>
+                    <div class="col-4 col-md-2">Robótica</div>
+                </div>
             </div>
         </div>
     </header>
     <hr class="division">
+    <section>
+        
+    </section>
     <footer>
-
+        <a href="#header"><img src="images/structure-logo_footer.png" class="logo-footer" alt="logo"></a>
+        <div class="text row">
+            <div class="contact col-10 col-md-6">
+                <h4>Contatos</h4>
+                <p>telefones:</p>
+                <ul>
+                    <li>(11) 9990-9990</li>
+                    <li>(11) 9990-8890</li>
+                </ul>
+                <p>e-mal:</p>
+                <ul>
+                    <li>fourth.cover@gmail.com</li>
+                </ul>
+            </div>
+            <div class="business-partner col-10 col-md-6">
+                <h4>Parceiros</h4>
+                <ul>
+                    <li><a target="_blank" href="https://www.amazon.com.br/"><img alt="amazon logo" class="amazon-logo"src="/images/book-amazon.png"></a></li>
+                    <li><a target="_blank" href="https://www.saraiva.com.br/"><img alt="saraiva logo" class="saraiva-logo"src="/images/book-saraiva.png"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-ele">
+            <div class="row">
+                <div class="col-6">
+                    <p >powered by</p>
+                </div>
+                <div class="col-6">
+                    <img class="logo-comp" src="/images/footer-company.png" alt="company logo">
+                </div>
+            </div>
+            
+            <p>Fourth Cover  |  todos os direitos reservados a &copyTGCompany  |  Avenida Paulista, 1439 - Bela Vista, São Paulo - SP</p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
